--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   tag-release:
-    runs-on: ubuntu-latest
+    runs-on: ${{ vars.UBUNTU_IMAGE }}
     steps:
       - name: Release
         uses: ${{ vars.RELEASE_ACTION }}
