--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ vars.UBUNTU_IMAGE }}
     steps:
       - name: Release
-        uses: ${{ vars.RELEASE_ACTION }}
+        uses: RedSockActions/release_tag@v1.1.6
         with:
           token: ${{ github.token }}
           config_path: version/version.yaml
